--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "Brisbane, AUS"
 resume_url: /docs/Jesus W Bolivar L- CV - Spetember 2025.docx
-avatar_image: /img/AiL-20240731-4418 Cropped.JPG
+avatar_image: /img/Jesus_Bolivar.JPG
 
 #-------------------------------
 # Contact links
@@ -51,5 +51,6 @@ defaults:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
 
 
