--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # About Section
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "Brisbane, AUS"
-resume_url: /docs/Jesus W Bolivar L- CV - Spetember 2025.docx
+resume_url: /docs/JW_Bolivar_CV_September_2025.docx
 avatar_image: /img/Jesus_Bolivar.jpg
 
 #-------------------------------
@@ -51,6 +51,7 @@ defaults:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
 
 
 
